# eOS

./: .gitignore  .gitmodules  Doxyfile  Readme.md  build_eos.sh  run_eos.sh  update_build.sh
.github/workflows/: ci.yml
docker/: Dockerfile
src/: CMakeLists.txt  EP.cpp  main.cpp  update_build.sh
src/Core/: CMakeLists.txt  Color.h  Config.cpp  Config.h  Def.h  Dir.cpp  Dir.h  EOSString.cpp  EOSString.h  Errors.h  File.cpp  File.h  Log.cpp  Log.h  Memory.h  Mutex.cpp  Mutex.h
src/Interface/: CMakeLists.txt
src/Interface/Base/: CMakeLists.txt  Color.h  Rect.cpp  Rect.h  Surface.cpp  Surface.h  SystemSurface.cpp  SystemSurface.h
src/Tests/: TestConfig.cpp  TestEOSString.cpp  TestFile.cpp  TestLog.cpp  TestMemory.cpp  TestMutex.cpp  TestRect.cpp  TestSurface.cpp  Tests_EP.cpp
src/asm/: asm.h
src/core/: Def.h  Errors.h  File.cpp  File.h  build.h  def.h  file.cpp  file.h
src/tests/: TestDir.cpp  TestFile.cpp  test_file.cpp
